[package]
name = "edgescan"
description = "A VCD viewer GUI."
authors = ["Jay Oster <jay@kodewerx.org>"]
homepage = "https://github.com/parasyte/edgescan"
keywords = ["vcd", "waveform", "viewer", "gui", "eda"]
categories = ["Visualization", "Development tools", "Science"]
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "4"
dwfv = { git = "https://github.com/parasyte/dwfv.git", branch = "update/deps", default-features = false }
egui = "0.21"
egui-wgpu = "0.21"
egui-winit = "0.21"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pollster = "0.3"
raw-window-handle = "0.5"
rfd = "0.11"
ron = "0.8"
serde = "1"
serde_derive = "1"
thiserror = "1"
wgpu = "0.15"
winit = "0.28"
winit_input_helper = { git = "https://github.com/parasyte/winit_input_helper.git", branch = "update/winit-0.28" }
